fix spacing on icon-button label

--- a/ui/app/components/ui/icon-button/icon-button.scss
+++ b/ui/app/components/ui/icon-button/icon-button.scss
@@ -20,7 +20,7 @@
     background: #037dd6;
     border-radius: 18px;
     margin-top: 6px;
-    margin-bottom: 8px;
+    margin-bottom: 5px;
   }
 
   &--disabled {
